--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+$primary-color: yellow;
+
+@import 'animated.css';
+
+@font-face {
+  font-family: 'Helvetica Neue' ;
+  src: url('./assets/font/helvetica-neu.ttf') format('ttf');
+}
 .App {
   text-align: center;
 }
